objects/LBI__LatticeAcctExtFieldDescribe__c.object
<CustomObject>
    <fields>
        <fullName>LBI__APIFieldName__c</fullName>
        <label>API Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DisplayNameFormula__c</fullName>
        <formula>IF(ISBLANK(LBI__DisplayName__c),
LBI__APIFieldName__c
,
LBI__DisplayName__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
                <value>
                    <fullName>CURRENCY</fullName>
                </value>
                <value>
                    <fullName>NUMBER</fullName>
                </value>
                <value>
                    <fullName>STRING</fullName>
                </value>
                <value>
                    <fullName>BOOLEAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__GenericFieldName__c</fullName>
        <label>Generic Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Acct Ext Field Describes</relationshipLabel>
        <relationshipName>LatticeAcctExtFieldDescribes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lattice Acct Ext Field Describe</label>
    <listViews>
        <fullName>LBI__All123</fullName>
        <columns>NAME</columns>
        <columns>LBI__APIFieldName__c</columns>
        <columns>LBI__DisplayName__c</columns>
        <columns>LBI__FieldType__c</columns>
        <columns>LBI__Length__c</columns>
        <columns>LBI__GenericFieldName__c</columns>
        <columns>LBI__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AEFD-{000000}</displayFormat>
        <label>Account Extension Field Describe Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Acct Ext Field Describes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>